<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ui.MainActivity2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="170dp" />

    <ImageView

        android:id="@+id/whatsapp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/whatsapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1" />


    <ImageView
        android:id="@+id/instagram"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toBottomOf="@id/whatsapp"
        app:layout_constraintStart_toEndOf="@id/whatsapp"
        app:layout_constraintTop_toTopOf="@id/whatsapp"/>
    <ImageView
        android:id="@+id/facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="@id/whatsapp"
        app:layout_constraintStart_toEndOf="@id/linkedin"
        app:layout_constraintTop_toTopOf="@id/whatsapp"/>
    <ImageView
        android:id="@+id/linkedin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/linkedin"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@id/whatsapp"
        app:layout_constraintStart_toEndOf="@id/instagram"
        app:layout_constraintTop_toTopOf="@id/whatsapp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="2dp"
        android:scaleType="fitXY"
        android:src="@drawable/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/rating"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:background="#333333"
        android:padding="5dp"
        android:text="Add your rating @ review your ratings matter"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/a_image"
        app:layout_constraintTop_toBottomOf="@id/percent"
        tools:layout_editor_absoluteX="214dp" />


    <ImageView
        android:id="@+id/heart"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/heart"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/a_title" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/heart"
        app:layout_constraintTop_toBottomOf="@id/a_title"
        tools:text="98" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="%"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/percent"
        app:layout_constraintTop_toTopOf="@id/percent"

        />

    <ImageView
        android:scaleType="fitXY"
        android:id="@+id/a_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/rating"
        tools:text="Action,Thriller"

        />


    <TextView
        android:id="@+id/a_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/description1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/a_image" />

    <TextView
        android:id="@+id/a_des"
        android:layout_width="203dp"
        android:layout_height="336dp"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <ImageView
        android:id="@+id/a_like"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description1"
        android:src="@drawable/like"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bookTicket"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="#FF0000"
android:textAllCaps="false"
        android:text="@string/book_ticket"
        android:backgroundTint="#ff0000"
        android:padding="5dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="#333333"
        android:text="@string/rate_now"
        android:textAllCaps="false"
        android:padding="5dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/bookTicket" />

    <TextView
        android:id="@+id/textlike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/blueBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        tools:text="12" />

    <ImageView
        android:id="@+id/a_dislike"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/dislike"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/a_like" />

    <TextView
        android:id="@+id/textdislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="220dp"
        android:textColor="@color/blueBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        tools:text="12" />

</androidx.constraintlayout.widget.ConstraintLayout>